Added wifi password for esp#2

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "wifi": {
         "ssid": "UW MPSK",
         "password": "HNmGRT4Y!y",
+        "password": "-}:[Djmk9A",
         "attempts": 20,
         "delay_in_msec": 100
     },
